plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.0'
	id 'io.spring.dependency-management' version '1.1.6'
	id 'com.epages.restdocs-api-spec' version "0.18.2"
}

group = 'com.kmu.anki'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url 'https://jitpack.io' }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-validation:3.5.0'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// test: test-container
	testImplementation 'org.testcontainers:junit-jupiter'
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'org.testcontainers:postgresql'

	// springdoc and open-api spec
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
	testImplementation 'com.epages:restdocs-api-spec-mockmvc:0.18.2'

	// query-dsl
	implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:5.1.0:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	// csv parser
	implementation 'com.univocity:univocity-parsers:2.9.1'

	// for logback
	implementation 'net.logstash.logback:logstash-logback-encoder:7.4'

	// mybatis
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.4'
	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.4'

	// test : spring security
	testImplementation "org.springframework.security:spring-security-test"

	// in memory cache
	implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'

	// jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// csv import library
	implementation 'com.github.js990311:csvloader:0.2.0'

	// hibernate search
	implementation 'org.hibernate.search:hibernate-search-mapper-orm:7.2.3.Final'
	implementation 'org.hibernate.search:hibernate-search-backend-lucene:7.2.3.Final'
	implementation 'org.apache.lucene:lucene-analysis-nori:9.11.1' // for korean. hibernate search7이 lucene 9.11.1을 사용하기 때문에 9.11.1버전으로 맞춤
}

openapi3{
	servers  = [
			{
				url = '/'
				description("현재 호스트에서 사용")
			},
			{
				url = 'https://virtserver.swaggerhub.com/js990311/Anki/1.0.0'
				description("swagger-hub에서 사용")
			}
	]
	title = "Anki"
	description = "Anki 작업"
	version="1.0.0"
	format = "yaml"
}

postman {
	title = 'anki'
	version = '0.1.0'
	baseUrl = 'http://hada.zapto.org:7070'
//	baseUrl = 'http://localhost:7070'
}

def loadEnv() {
	def envFile = file('.env')
	if (envFile.exists()) {
		def properties = new Properties()
		envFile.withReader('UTF-8') { reader ->
			properties.load(reader)
		}
		return properties
	} else {
		logger.warn(".env file not found.")
		return null
	}
}

tasks.named('test') {
	def envProperties = loadEnv()
	if (envProperties) {
		environment envProperties
	}
	useJUnitPlatform()
}

tasks.register('docs', Copy) {
	doFirst {
		delete file('src/main/resources/docs/openapi3.yaml')
	}
	from file('build/api-spec/openapi3.yaml')
	into file('src/main/resources/docs/.')
	dependsOn tasks.named('openapi3')

	dependsOn tasks.named('processResources')
	doLast{
		delete file('build/generated-snippets')
	}
}

bootJar{
	archiveFileName = "backend.jar"
}

task loadCsv(type: JavaExec) {
	group = "loadcsv"
	description = "load csv"

	mainClass = "com.rejs.csvloader.CsvloaderApplication"

	// CP 설정
	classpath = sourceSets.main.runtimeClasspath

	args "-y", "card.yml", "-c", "insert_data.csv"
	args "--spring.main.web-application-type=NONE"
	args "--spring.profiles.active=loadcsv"
}
